feat: add price to seed

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -26,7 +26,7 @@ services:
         max-size: '10m'
         max-file: '5'
     working_dir: /usr/src/drivent
-    command: bash -c "npm run dev:migrate"
+    command: bash -c "npx prisma migrate dev && npx prisma db seed && npm run dev:migrate"
     env_file: .env.development
     environment:
       NODE_ENV: development
