--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "migration:run": "prisma migrate deploy",
     "migration:generate": "npm run dev:load-envs prisma migrate dev",
     "lint:staged": "lint-staged",
+    "test:load-envs": "dotenv -e .env.test",
     "test": "dotenv -e .env.test jest --passWithNoTests -- --runInBand",
+    "test:migrate": "dotenv -e .env.test -- npx prisma migrate dev && dotenv -e .env.test -- jest --runInBand",
     "test:migration:run": "npm run test:load-envs prisma migrate deploy",
     "test:migration:generate": "npm run test:load-envs prisma migrate dev",
     "test:watch": "jest --watch --passWithNoTests --runInBand",
@@ -19,7 +21,6 @@
     "test:compose": "docker-compose -f docker-compose.test.yml --env-file .env.test",
     "test:postgres": "npm run test:compose -- up -d drivent-postgres-test",
     "test:postgres:down": "npm run test:compose -- down -v",
-    "test:load-envs": "dotenv -e .env.test",
     "test:docker:migration:run": "npm dev:compose -- drivent-development npm run test:load-envs prisma migrate deploy",
     "test:docker:migration:generate": "npm run test:load-envs prisma migrate dev",
     "dev:compose": "docker-compose -f docker-compose.development.yml --env-file .env.development",
