--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "lint:staged": "lint-staged",
     "test:load-envs": "dotenv -e .env.test",
     "test": "dotenv -e .env.test jest --passWithNoTests -- --runInBand",
+    "test:schema": "jest --testPathPattern=tests/schemas",
+    "test:int": "dotenv -e .env.test jest --testPathPattern=tests/integration -- --runInBand",
+    "test:unit": "jest --testPathPattern=tests/services -- --runInBand",
     "test:migrate": "dotenv -e .env.test -- npx prisma migrate dev && dotenv -e .env.test -- jest --runInBand",
     "test:migration:run": "npm run test:load-envs prisma migrate deploy",
     "test:migration:generate": "npm run test:load-envs prisma migrate dev",
