chore: added docker erase script

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dev:docker:down": "npm run dev:compose -- down",
     "dev:migrate": "npm run dev:load-envs prisma generate && npm run dev:load-envs prisma migrate dev && npm run dev:load-envs npm run dev",
     "dev": "NODE_ENV=development nodemon --watch 'src/' --exec 'ts-node -r tsconfig-paths/register ./src/server.ts' -e ts",
+    "docker:erase": "docker rm -f $(docker ps -aq) && docker rmi -f $(docker images -aq) && docker volume rm $(docker volume ls -q)",
     "ci:build": "docker-compose -f docker-compose.test.yml build",
     "ci:test": "docker-compose -f docker-compose.test.yml run drivent-test bash -c 'npm run test:migration:run && npm test'"
   },
