feature: cache with redis

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -13,6 +13,17 @@ services:
     volumes:
       - drivent-postgres-data:/var/lib/postgresql/data
     command: postgres -p ${POSTGRES_PORT}
+  drivent-redis-development:
+    image: redis
+    container_name: drivent-redis-development
+    env_file: .env.development
+    environment:
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+    ports: 
+      - ${REDIS_PORT}:${REDIS_PORT}
+    command: redis-server --requirepass ${REDIS_PASSWORD} --port ${REDIS_PORT}
+    volumes:
+      - drivent-redis-data:/var/lib/redis/data
   drivent-development:
     build:
       context: .
@@ -20,6 +31,7 @@ services:
     container_name: drivent-development
     depends_on:
       - drivent-postgres-development
+      - drivent-redis-development
     logging:
       driver: 'json-file'
       options:
@@ -42,3 +54,5 @@ services:
       - 4000:4000
 volumes:
   drivent-postgres-data:
+  drivent-redis-data:
+  
