--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,9 @@ POSTGRES_DATABASE=drivent_test
 JWT_SECRET=top_secret
 
 DATABASE_URL=postgresql://${POSTGRES_USERNAME}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}?schema=public
+
+REDIS_PASSWORD=top_secret
+REDIS_HOST=drivent-redis-test
+REDIS_PORT=5434
+
+REDIS_URL=redis://:${REDIS_PASSWORD}@${REDIS_HOST}:${REDIS_PORT}
