--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -15,6 +15,19 @@ services:
     volumes:
       - ~/data/drivent/postgres-test:/var/lib/postgresql/data
     command: postgres -p ${POSTGRES_PORT}
+  drivent-redis-development:
+    image: redis
+    container_name: drivent-redis-development
+    env_file:
+      - .env.test
+    environment:
+      REDIS_URL: ${REDIS_URL}
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+    ports: 
+      - ${REDIS_PORT}:${REDIS_PORT}
+    command: redis-server --requirepass ${REDIS_PASSWORD} --port ${REDIS_PORT}
+    volumes:
+      - ~data/drivent/redis-test:/var/lib/redis/data
   drivent-test:
     build:
       context: .
@@ -22,6 +35,7 @@ services:
     container_name: drivent-test
     depends_on:
       - drivent-postgres-test
+      - drivent-redis-development
     logging:
       driver: 'json-file'
       options:
