--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       NODE_ENV: production
       DATABASE_URL: ${DATABASE_URL}
       JWT_SECRET: ${JWT_SECRET}
+
   drivent-postgres-production:
     image: postgres:13-alpine
     environment:
@@ -28,6 +29,18 @@ services:
     volumes:
       - /usr/local/drivent-pg/data:/var/lib/postgresql/data
     command: postgres -p ${POSTGRES_PORT}
+  
+  drivent-redis-production:
+    image: redis
+    container_name: drivent-redis-production
+    environment:
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+    ports: 
+      - ${REDIS_PORT}:${REDIS_PORT}
+    command: redis-server --requirepass ${REDIS_PASSWORD} --port ${REDIS_PORT}
+    volumes:
+      - drivent-redis-data:/var/lib/redis/data
+
   drivent-nginx:
     image: nginx
     ports:
