--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -13,13 +13,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Environment variables setup
+      - name: Setup Environment Variables
         run: |
           cd $GITHUB_WORKSPACE
           echo "$SECRETS" > ./.github/workflows/scripts/env.json
           docker run -v $GITHUB_WORKSPACE:/usr/app node:16.15-alpine sh -c "cd /usr/app && node .github/workflows/scripts/generate-env-file.js"
         env:
           SECRETS: ${{ toJson(secrets) }}
+
+      - name: Clean Docker
+        run: docker system prune --force --all
 
       - name: Build
         run: docker-compose build
