--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,10 @@ jobs:
           envkey_POSTGRES_DATABASE: ${{ secrets.POSTGRES_DATABASE }}
           envkey_JWT_SECRET: ${{ secrets.JWT_SECRET }}
           envkey_DATABASE_URL: ${{ secrets.DATABASE_URL_TEST }}
+          envkey_REDIS_PASSWORD: ${{ secrets.REDIS_PASSWORD }}
+          envkey_REDIS_PORT: ${{ secrets.REDIS_PORT }}
+          envkey_REDIS_HOST: ${{ secrets.REDIS_HOST_TEST }}
+          envkey_REDIS_URL: ${{ secrets.REDIS_URL_TEST }}
           
           file_name: .env.test
           fail_on_empty: true
@@ -40,6 +44,10 @@ jobs:
           envkey_POSTGRES_DATABASE: ${{ secrets.POSTGRES_DATABASE }}
           envkey_JWT_SECRET: ${{ secrets.JWT_SECRET }}
           envkey_DATABASE_URL: ${{ secrets.DATABASE_URL_TEST }}
+          envkey_REDIS_PASSWORD: ${{ secrets.REDIS_PASSWORD }}
+          envkey_REDIS_PORT: ${{ secrets.REDIS_PORT }}
+          envkey_REDIS_HOST: ${{ secrets.REDIS_HOST_TEST }}
+          envkey_REDIS_URL: ${{ secrets.REDIS_URL_TEST }}
           
           file_name: .env
           fail_on_empty: true
